[package]
name = "cf-ddns-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
config = { version = "0.15", features = ["json"] }
rand = "0.8"
